Fix: some changes

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
   <title>SkyNet Links de Acceso</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,15 +40,16 @@
               Sky Net Hosting
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
-                  <a class="nav-link" href="index.html">HOGAR <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">HOGAR</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="why.html"> NUESTROS SERVICIOS </a>
@@ -57,14 +59,9 @@
                   <a class="nav-link" href="trainer.html"> SOBRE NOSOTROS </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="contact.html"> LINKS DE ACCESO</a>
+                  <a class="nav-link" href="contact.html"> LINKS DE ACCESO <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
-              <div class="user_option">
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -84,11 +81,17 @@
         <div class="col-md-12 mx-auto">
           <div class="detail-box">
             <h2>
-              SOBRE NOSOTROS
+              NUESTROS CLIENTES
             </h2>
             <p>
-              En SkyNet Hosting, nos dedicamos a proporcionar soluciones de alojamiento web personalizadas que impulsan a las empresas a alcanzar su máximo potencial en el mundo digital. Con años de experiencia en la industria, nuestro compromiso es garantizar que cada cliente cuente con un servicio seguro, eficiente y de alto rendimiento.<br></br>
-              Entendemos que cada proyecto es único, por eso ofrecemos una amplia gama de servicios que van desde Planes Compartidos para pequeñas empresas y blogs, hasta Servidores VPS y Dedicados para aquellos que requieren un mayor control y recursos exclusivos. Además, ofrecemos Certificados Digitales para asegurar transacciones en línea, configuraciones avanzadas de Control de Acceso, y asesoría en la Resolución de Nombres de Dominio, asegurando que tu presencia en internet sea sólida y confiable.
+              <a href="https://www.solucionesinnovasoft.com">
+                <h2>Soluciones Informáticas InnovaSoft</h2>
+              </a>
+              <br />
+              <br />
+              <a href="https://www.tiendaonlineelectrohub.com/">
+                <h2>Tienda Online ElectroHub</h2>
+              </a>
             </p>
           </div>
         </div>
@@ -110,7 +113,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Cali
               </p>
             </div>
           </div>
@@ -122,7 +125,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +57 1234567890
               </p>
             </div>
           </div>
@@ -134,7 +137,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                info@empresaskynethosting.com
               </p>
             </div>
           </div>
@@ -148,8 +151,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2020 All Rights Reserved.
     </p>
   </footer>
   <!-- footer section -->
