--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <title>Sky Net Hosting</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,7 +40,8 @@
               Sky Net Hosting
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -60,11 +62,6 @@
                   <a class="nav-link" href="contact.html"> LINKS DE ACCESO </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -87,7 +84,10 @@
                       Hosting
                     </h1>
                     <p>
-                      En SkyNet Hosting, somos líderes en la industria del alojamiento web, ofreciendo soluciones personalizadas que se adaptan a las necesidades únicas de cada cliente. Con un enfoque en la seguridad, rendimiento y soporte al cliente, garantizamos que tu presencia en línea esté siempre activa y segura.
+                      En SkyNet Hosting, somos líderes en la industria del alojamiento web, ofreciendo soluciones
+                      personalizadas que se adaptan a las necesidades únicas de cada cliente. Con un enfoque en la
+                      seguridad, rendimiento y soporte al cliente, garantizamos que tu presencia en línea esté siempre
+                      activa y segura.
                     </p>
                   </div>
                 </div>
@@ -106,7 +106,8 @@
                       Hosting
                     </h1>
                     <p>
-                      Nuestra mision es proporcionar servicios de hosting de alta calidad que empoderen a las empresas para prosperar en el mundo digital.
+                      Nuestra mision es proporcionar servicios de hosting de alta calidad que empoderen a las empresas
+                      para prosperar en el mundo digital.
                     </p>
                   </div>
                 </div>
@@ -125,7 +126,8 @@
                       Hosting
                     </h1>
                     <p>
-                      Nuestra vision es ser la elección preferida para el alojamiento web en el mercado, ofreciendo innovación y atención al cliente excepcionales.
+                      Nuestra vision es ser la elección preferida para el alojamiento web en el mercado, ofreciendo
+                      innovación y atención al cliente excepcionales.
                     </p>
                   </div>
                 </div>
@@ -144,7 +146,8 @@
                       Hosting
                     </h1>
                     <p>
-                      “SkyNet Hosting ha transformado nuestra presencia en línea. Su soporte es excepcional y siempre están dispuestos a ayudar.” – Juan Pérez, CEO de Empresa ABC
+                      “SkyNet Hosting ha transformado nuestra presencia en línea. Su soporte es excepcional y siempre
+                      están dispuestos a ayudar.” – Juan Pérez, CEO de Empresa ABC
                   </div>
                 </div>
               </div>
@@ -238,7 +241,8 @@
                   CERTIFICADOS DIGITALES
                 </h5>
                 <p>
-                  Protege tus transacciones en línea y genera confianza entre tus clientes con nuestros certificados SSL.
+                  Protege tus transacciones en línea y genera confianza entre tus clientes con nuestros certificados
+                  SSL.
                 </p>
               </div>
             </div>
@@ -253,7 +257,8 @@
                   PAGINAS PERSONALES PARA EMPLEADOS
                 </h5>
                 <p>
-                  Proporcionamos herramientas para que cada empleado tenga una página personal que destaque sus logros y experiencia.
+                  Proporcionamos herramientas para que cada empleado tenga una página personal que destaque sus logros y
+                  experiencia.
                 </p>
               </div>
             </div>
@@ -278,8 +283,15 @@
               SOBRE NOSOTROS
             </h2>
             <p>
-              En SkyNet Hosting, nos dedicamos a proporcionar soluciones de alojamiento web personalizadas que impulsan a las empresas a alcanzar su máximo potencial en el mundo digital. Con años de experiencia en la industria, nuestro compromiso es garantizar que cada cliente cuente con un servicio seguro, eficiente y de alto rendimiento.<br></br>
-              Entendemos que cada proyecto es único, por eso ofrecemos una amplia gama de servicios que van desde Planes Compartidos para pequeñas empresas y blogs, hasta Servidores VPS y Dedicados para aquellos que requieren un mayor control y recursos exclusivos. Además, ofrecemos Certificados Digitales para asegurar transacciones en línea, configuraciones avanzadas de Control de Acceso, y asesoría en la Resolución de Nombres de Dominio, asegurando que tu presencia en internet sea sólida y confiable.
+              En SkyNet Hosting, nos dedicamos a proporcionar soluciones de alojamiento web personalizadas que impulsan
+              a las empresas a alcanzar su máximo potencial en el mundo digital. Con años de experiencia en la
+              industria, nuestro compromiso es garantizar que cada cliente cuente con un servicio seguro, eficiente y de
+              alto rendimiento.<br></br>
+              Entendemos que cada proyecto es único, por eso ofrecemos una amplia gama de servicios que van desde Planes
+              Compartidos para pequeñas empresas y blogs, hasta Servidores VPS y Dedicados para aquellos que requieren
+              un mayor control y recursos exclusivos. Además, ofrecemos Certificados Digitales para asegurar
+              transacciones en línea, configuraciones avanzadas de Control de Acceso, y asesoría en la Resolución de
+              Nombres de Dominio, asegurando que tu presencia en internet sea sólida y confiable.
             </p>
           </div>
         </div>
@@ -301,7 +313,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Cali
               </p>
             </div>
           </div>
@@ -313,7 +325,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +57 1234567890
               </p>
             </div>
           </div>
@@ -325,7 +337,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                info@empresaskynethosting.com
               </p>
             </div>
           </div>
@@ -339,8 +351,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2020 All Rights Reserved.
     </p>
   </footer>
   <!-- footer section -->
