--- a/why.html
+++ b/why.html
@@ -15,7 +15,8 @@
   <title>SkyNet Nuestros Servicios</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,7 +40,8 @@
               Sky Net Hosting
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -47,24 +49,19 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">HOGAR <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">HOGAR</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="why.html"> NUESTROS SERVICIOS </a>
+                  <a class="nav-link" href="why.html"> NUESTROS SERVICIOS <span class="sr-only">(current)</span> </a>
                 </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="trainer.html"> SOBRE NOSOTROS</a>
+                  <a class="nav-link" href="trainer.html"> SOBRE NOSOTROS </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html"> LINKS DE ACCESO</a>
+                  <a class="nav-link" href="contact.html"> LINKS DE ACCESO </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -126,7 +123,8 @@
                   CERTIFICADOS DIGITALES
                 </h5>
                 <p>
-                  Protege tus transacciones en línea y genera confianza entre tus clientes con nuestros certificados SSL.
+                  Protege tus transacciones en línea y genera confianza entre tus clientes con nuestros certificados
+                  SSL.
                 </p>
               </div>
             </div>
@@ -141,7 +139,8 @@
                   PAGINAS PERSONALES PARA EMPLEADOS
                 </h5>
                 <p>
-                  Proporcionamos herramientas para que cada empleado tenga una página personal que destaque sus logros y experiencia.
+                  Proporcionamos herramientas para que cada empleado tenga una página personal que destaque sus logros y
+                  experiencia.
                 </p>
               </div>
             </div>
@@ -152,6 +151,7 @@
   </section>
 
   <!-- end us section -->
+
 
 
   <!-- info section -->
@@ -165,7 +165,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Cali
               </p>
             </div>
           </div>
@@ -177,7 +177,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +57 1234567890
               </p>
             </div>
           </div>
@@ -189,7 +189,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                info@empresaskynethosting.com
               </p>
             </div>
           </div>
@@ -203,8 +203,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2020 All Rights Reserved.
     </p>
   </footer>
   <!-- footer section -->
