--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,12 @@
               NUESTROS CLIENTES
             </h2>
             <p>
-              <a href="https://www.solucionesinnovasoft.com">
+              <a href="https://www.solucionesinnovasoft.com" target="_blank">
                 <h2>Soluciones Informáticas InnovaSoft</h2>
               </a>
               <br />
               <br />
-              <a href="https://www.tiendaonlineelectrohub.com/">
+              <a href="https://www.tiendaonlineelectrohub.com/" target="_blank">
                 <h2>Tienda Online ElectroHub</h2>
               </a>
             </p>
